src/components/text-image-block/text-image-block.scss
@import "../../scss/custom-property";
@import "../../scss/global.scss";

.projects__container {
  display: flex;
  flex-direction: column;
  gap: 0;
}

.project {
  display: flex;
  width: 100%;
  height: 732px;

  @include bp($bp-tablet) {
    height: 432px;
  }

  @include bp($bp-mobile) {
    flex-direction: column;
    width: 100%;
    height: fit-content;
  }

  &__image {
    width: 50%;
    height: 100%;

    @include bp($bp-mobile) {
      width: 100%;
    }
  }

  &__content {
    width: 50%;

    @include bp($bp-mobile) {
      width: 100%;
    }
  }
}

.img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.project__title {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 20px;

  @include bp($bp-mobile) {
    padding: 2rem;
  }

  &__language {
    font-size: var(--font-xxs);
    color: var(--main-light-color);
    font-weight: var(--regular-font-weight);
    margin: 0;

    @include bp($bp-mobile) {
      font-size: 16px;
    }
  }

  &__exercise {
    font-size: var(--font-s);
    color: var(--main-light-color);
    font-weight: var(--regular-font-weight);
    margin: 0;
    padding-bottom: 40px;

    @include bp($bp-tablet) {
      font-size: var(--font-xs);
      padding-bottom: 20px;
    }

    @include bp($bp-mobile) {
      font-size: var(--font-xxs);
      padding-bottom: 10px;
    }
  }
}

.about__content {
  width: 50%;
  height: 100%;

  @include bp($bp-mobile) {
    width: 100%;
  }

  &__text {
    padding-left: 4rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;

    @include bp($bp-tablet) {
      padding: 0 2rem;
    }

    @include bp($bp-mobile) {
      padding: 2rem;
      gap: 48px;
    }
  }
}

.text {
  font-size: var(--font-xs);
  color: var(--main-light-color);
  margin: 0;

  @include bp($bp-tablet) {
    font-size: var(--font-xxs);
  }

  @include bp($bp-mobile) {
    font-size: 16px;
  }
}

.column__true {
  display: flex;
  flex-direction: column;
  width: 50%;
  gap: 4rem;

  @include bp($bp-tablet) {
    width: 100%;
  }
}

.project__image__column {
  width: 100%;
  height: 800px;
}

.about__content__column {
  width: 100%;

  &__text {
    padding: 0;
  }
}

.btn__none {
  display: none;
}

.image__content__block {
  display: flex;
  height: 600px;
  gap: 200px;

  @include bp($bp-tablet) {
    flex-direction: column;
    height: fit-content;
  }
}

.content__block {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  @include bp($bp-tablet) {
    width: fit-content;
    height: 300px;
    padding: 0 4rem;
  }

  @include bp($bp-mobile) {
    padding: 0 2rem;
  }

  &__introduction {
    display: flex;
    flex-direction: column;
    gap: 20px;

    &__paragraph {
      font-size: var(--font-xxs);
      color: var(--main-light-color);
      margin: 0;

      @include bp($bp-mobile) {
        font-size: 16px;
      }
    }
  }

  &__introduction h2 {
    margin: 0;

    @include bp($bp-tablet) {
      padding: 0;
    }
  }
}

.image__block {
  width: 50%;
  height: 100%;

  @include bp($bp-tablet) {
    width: 100%;
    height: 500px;
  }
}

.small__description {
  display: flex;
  justify-content: space-between;
  border-top: solid 1px var(--main-light-color);
  padding: 24px 0 0 0;
  align-items: center;

  &__part {
    display: flex;
    flex-direction: column;
    gap: 12px;
    margin: 0;

    &__category {
      font-size: 20px;
      color: var(--main-medium-color);
      margin: 0;

      @include bp($bp-mobile) {
        font-size: 14px;
      }

      &__content {
        font-size: 20px;
        color: var(--main-light-color);
        margin: 0;

        @include bp($bp-mobile) {
          font-size: 14px;
        }
      }
    }
  }
}

